--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,10 @@
+/* Reset básico */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -117,6 +124,7 @@ video {
   transition: transform 0.3s, box-shadow 0.3s; 
   padding: 10px; 
   position: relative; 
+  border-color: chartreuse;
 }
 
 
@@ -136,6 +144,7 @@ video {
   position: absolute;
   top: 0; 
   left: 0; 
+  border-color: chartreuse;
 }
 
 
@@ -351,7 +360,7 @@ button:hover {
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
   #timer {
     font-size: 0.8em;
     gap: 8px;
@@ -368,11 +377,4 @@ button:hover {
     border-radius: 10px; 
   }
 }
-@media (min-width: 600px) and (max-width: 800px) {
-  .video-container {
-    padding-top: 2%;
-    width: 100%;
-    height: auto;
-    margin-top: 100px; 
-  }
-}
+
